add primal.net to app links

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -32,6 +32,7 @@
 			<td>
 				<a href=https://snort.social/p/{{.Npub}}>Snort</a>
 				<a href=https://iris.to/{{.Npub}}>Iris</a>
+				<a href=https://primal.net/profile/{{.Feed.Npub}}>Primal</a>
 				<a href=nostr:{{.Npub}}>Native</a>
 			</td>
 
