--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -42,7 +42,7 @@
 </table>
 <br />
 <br />
-<div id="footer">Released under GPL. <a href="https://git.sr.ht/~psic4t/atomstr">Code on Sourcehut</a> — CC by-nc-nd psic4t<br>
+<div id="footer">atomstr {{.Version}} &bullet; Released under GPL &bullet; <a href="https://git.sr.ht/~psic4t/atomstr">Code on Sourcehut</a> &bullet; CC by-nc-nd psic4t<br>
 </div>
 </body>
 </html>
