Add satellite.earth to apps list

--- a/templates/add.tmpl
+++ b/templates/add.tmpl
@@ -17,8 +17,8 @@
 			<td>{{.Feed.Url}}</td>
 			<td>
 				<a href=https://snort.social/p/{{.Feed.Npub}}>Snort</a>
-				<a href=https://iris.to/{{.Feed.Npub}}>Iris</a>
 				<a href=https://primal.net/profile/{{.Feed.Npub}}>Primal</a>
+				<a href=https://satellite.earth/@{{.Npub}}>Satellite</a>
 				<a href=nostr:{{.Feed.Npub}}>Native</a>
 			</td>
 
