--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -25,7 +25,7 @@
 <table>
 	<tbody>
 	<th>URL</th>
-	<th>Open in</th>
+	<th class="opener">Open in</th>
 	{{range .Feeds}}
 		<tr>
 			<td>{{.Url}}</td>
