--- a/templates/add.tmpl
+++ b/templates/add.tmpl
@@ -18,8 +18,8 @@
 			<td>
 				<a href=https://snort.social/p/{{.Feed.Npub}}>Snort</a>
 				<a href=https://primal.net/profile/{{.Feed.Npub}}>Primal</a>
-				<a href=https://satellite.earth/@{{.Npub}}>Satellite</a>
-				<a href=nostr:{{.Feed.Npub}}>Native</a>
+				<a href=https://satellite.earth/@{{.Feed.Npub}}>Satellite</a>
+                                <a href=nostr:{{.Feed.Npub}}>Native</a>
 			</td>
 
 		</tr>
