add noStrudel to link list

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -31,8 +31,8 @@
 			<td>{{.Url}}</td>
 			<td>
 				<a href=https://snort.social/p/{{.Npub}}>Snort</a>
+				<a href=https://nostrudel.ninja/#/u/{{.Npub}}>noStrudel</a>
 				<a href=https://primal.net/profile/{{.Npub}}>Primal</a>
-				<a href=https://satellite.earth/@{{.Npub}}>Satellite</a>
 				<a href=nostr:{{.Npub}}>Native</a>
 			</td>
 
