--- a/templates/add.tmpl
+++ b/templates/add.tmpl
@@ -16,10 +16,10 @@
 		<tr>
 			<td>{{.Feed.Url}}</td>
 			<td>
-				<a href=https://snort.social/p/{{.Feed.Npub}}>Snort</a>
-				<a href=https://nostrudel.ninja/#/u/{{.Feed.Npub}}>noStrudel</a>
-				<a href=https://primal.net/profile/{{.Feed.Npub}}>Primal</a>
-                                <a href=nostr:{{.Feed.Npub}}>Native</a>
+				<a href="https://snort.social/p/{{.Feed.Npub}}">Snort</a>
+				<a href="https://nostrudel.ninja/#/u/{{.Feed.Npub}}">noStrudel</a>
+				<a href="https://primal.net/profile/{{.Feed.Npub}}">Primal</a>
+        <a href="nostr:{{.Feed.Npub}}">Native</a>
 			</td>
 
 		</tr>
