--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -28,7 +28,7 @@
 	<th class="opener">Open in</th>
 	{{range .Feeds}}
 		<tr>
-			<td>{{.Url}}</td>
+			<td>{{.URL}}</td>
 			<td>
 				<a href="https://snort.social/p/{{.Npub}}">Snort</a>
 				<a href="https://nostrudel.ninja/#/u/{{.Npub}}">noStrudel</a>
