--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -42,7 +42,7 @@
 </table>
 <br />
 <br />
-<div id="footer">atomstr {{.Version}} &bullet; Released under GPL &bullet; <a href="https://git.sr.ht/~psic4t/atomstr">Code on Sourcehut</a> &bullet; CC by-nc-nd psic4t<br>
+<div id="footer">atomstr {{.Version}} &bullet; Released under GPL &bullet; <a href="https://github.com/psic4t/atomstr">Code on Github</a> &bullet; CC by-nc-nd psic4t<br>
 </div>
 
 <!-- Spinner/Lightbox Overlay -->
