--- a/static/main.css
+++ b/static/main.css
@@ -13,11 +13,19 @@ body{
 	text-decoration: none;
 }
 
+.logo {
+	height: 1.8em;
+	margin-right: 0.5em;
+	vertical-align: middle;
+}
+
 #title h1 {
 	font-size: 2.4em;
 	margin:10px 0 0;
 	border-bottom: none;
 	padding-bottom: 0.1em;
+	display: flex;
+	align-items: center;
 }
 #title h1::before{
 	content: '';
