--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,8 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="stylesheet" href="/static/main.css" type="text/css" />
+<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/static/favicon-192x192.png">
 <title>atomstr</title></head><body>
-<div id="title"><h1><a class="title" href="/">atomstr</a></h1></div>
+<div id="title"><h1><img src="/static/atomstr-logo.png" alt="atomstr logo" class="logo"><a class="title" href="/">atomstr</a></h1></div>
 <p>RSS/Atom gateway to Nostr.</p>
 
 <p>Add at least one of the following relays to read the feeds:
